cmake_minimum_required(VERSION 2.8)
project(vs CXX)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_FLAGS "-std=c++11 -O0 -g -Wall -Wextra")

add_custom_target(all_examples)

macro(add name)
  add_executable(${name} ${name}.cpp)
  add_dependencies(${name} all_examples)
endmacro()

add(vs01)
add(vs02)
add(vs03)
add(vs04)
add(vs05)
add(vs06)
add(vs07)
add(vs08)
add(vs09)
add(vs10)
add(vs11)
add(vs12)
add(vs13)

find_package(CAF COMPONENTS io core)

if (CAF_FOUND)
  MESSAGE(STATUS "CAF includes: ${CAF_INCLUDE_DIRS}")
  MESSAGE(STATUS "CAF libs: ${CAF_LIBRARIES}")
  include_directories(${CAF_INCLUDE_DIRS})
  macro(add_caf name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} ${CAF_LIBRARIES})
    add_dependencies(${name} all_examples)
  endmacro()
  add_caf(vs14)
  add_caf(vs15)
  add_caf(vs16)
  add_caf(vs17)
  add_caf(vs18)
  add_caf(vs19)
  add_caf(vs20)
  add_caf(vs21)
endif()
